--- a/index.html/index.html
+++ b/index.html/index.html
@@ -9,8 +9,10 @@
     <script defer src="C:\Users\anima\Desktop\projects\Timed-Quiz\assets\script.js"></script>
 </head>
 <body>
-    <!--Rules to the Quiz-->
-    <div class="info_box">
+    <!--The Quiz Container-->
+    <div class="container">
+         <!--Rules to the Quiz-->
+    <div id="info_box"class="info_box box">
         <div class="info_title">
             <span>The rules to the Quiz</span>
         </div>
@@ -22,9 +24,8 @@
             <div class="info">5. You'll get points for every correct answer.</div>
             <div class="info">6. I hope you enjoy the quiz!</div>
         </div>
+    <!--Question Container-->
     </div>
-    <!--The Quiz Container-->
-    <div class="container">
         <div id="question-container" class="hide">
             <div id="question">Question</div>
             <div id="answer-buttons" class="btn-grid">
