added dead timer

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -17,7 +17,7 @@
             <span>The rules to the Quiz</span>
         </div>
         <div class="info_list">
-            <div class="info">1. You will have only <span>15 seconds</span> per each question.</div> 
+            <div class="info">1. You will have only <strong>15 seconds</strong> per each question.</div> 
             <div class="info">2. Once you select your answer, you can't reselect.</div>
             <div class="info">3. You can't select any option once the timer goes off.</div>
             <div class="info">4. You can't exit the quiz once you begin.</div>
@@ -27,6 +27,10 @@
     <!--Question Container-->
     </div>
         <div id="question-container" class="hide">
+            <div id="timer">
+                <div class="time_text">Time left</div>
+                <div class="timer_sec">15</div>
+            </div>
             <div id="question">Question</div>
             <div id="answer-buttons" class="btn-grid">
                 <button class="btn">Answer 1</button>
